<resources>
    <string name="app_name">MusicApp</string>
    <string name="vibes_text">Vibes</string>
    <string name="tracked_artists_header">Your tracked artists</string>
    <string name="charts_header">Charts</string>
    <string name="recommendations_header">You might like it</string>
    <string name="search_history_header">Search history</string>
    <string name="my_library_header">My library</string>
    <string-array name="genres">
        <item>Freshmen</item>
        <item>Rock</item>
        <item>Rap</item>
        <item>Jazz</item>
        <item>Ambient</item>
    </string-array>

    <string name="search_history_text">Search history</string>
    <string name="search_text">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_all_text">Clear all</string>
    <string name="no_internet_text">Something went wrong with Internet connection</string>
    <string name="no_internet_description">Please try again later</string>
    <string name="try_again_text">Try again</string>
    <string name="no_search_results">Oops, we can\'t find tracks for your search</string>

    <string name="nickname">Nickname</string>
    <string name="tittle_tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="darktheme">DarkTheme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="save">Save</string>
    <string name="songname">Songname</string>
    <string name="artistname">Artistname</string>


    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="see_all">See All</string>
    <string name="sign_out">Sign Out</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>